@@ -1,3 +1,9 @@
+2009-12-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_jpeg.c: Ensure that tif_scanlinesize is computed after
+	resetting of the upsampling values (gdal:#3259).
+	http://bugzilla.maptools.org/show_bug.cgi?id=1936
+
 2009-11-30  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* contrib/dbs/tiff-grayscale.c, contrib/tif-palette.c, 
